# ProyectoFISLAB

./: README.md  informe1.md  informe5.md  pyproject.toml  tabla1.csv  tabla2.csv  tabla4.csv  teoria_git.md  teoria_mov.md  teoria_poetry.md  teoria_unit_testing.git.md
.github/workflows/: CI.yml  mi-action.yml
MMC/: coefA.py  coefB.py
src/: cod.py  codigo1.py  codigo2.py  codigo3.py  codigo4.py  codigo5.py  codigo6.py  codigofinal.py  informe2.md  informe3.md  informe4.md  informe6.md  tabla1.csv  tabla3.csv  tabla5.csv  tabla6.csv
test/: cod.py  test_codigo.py
tests/: test_codigo.py
