[tool.poetry]
name = "proyectofislab"
version = "0.1.0"
description = ""
authors = ["carolinecondorirojas-dev <branezromerosharlinnavyolet03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = ">=2.3.3,<3.0.0"
matplotlib = ">=3.10.7,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
